--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -33,7 +33,10 @@
     <% end %>
   </tbody>
 </table>
-
+<%= form_tag(tasks_path, method: :get) do %>
+  <%= text_field_tag :term, params[:term] %>
+  <%= submit_tag 'Search', name: nil %>
+<% end %>
 <br>
 
 <%= link_to 'New Task', new_task_path %>
