step 19 user model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
-<h1>Welcome <%= @user.name %> </h1>
+<h1>Welcome <%= @user.name %> page's</h1>
+# <h1><%= @user.name %>page's</h1>
+
+<p>email address: <%= @user.email %></p>
 <div class="container">        
-        <h3>Add a Product</h3>   
+        <h3>Add a user</h3>   
        
             <div>   
               <label>user Name:</label>   
