--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,16 @@
 </header>
 </div>
 <div class="body">
+<% flash.each do |key, value| %>
+  <%= content_tag(:div, value, class: "#{key}") %>
+<% end %>
 
+<% if logged_in? %>
+  <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+<% else %>
+  <%= link_to "Sign up", new_user_path %>
+  <%= link_to "Login", new_session_path %>
+<% end %>
 
     <%= yield %>
  
