--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -27,13 +27,17 @@
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
         <td><%= link_to 'Show', task %></td>
+        <% if logged_in? %>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
 
 <br>
 <%= paginate @tasks %>
+<% if logged_in? %>
 <%= link_to 'New Task', new_task_path %>
+<% end %>
