--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -26,6 +26,7 @@
         <td><%= task.kind_of_task %></td>
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
+        <td><%= task.user_id %></td>
         <td><%= link_to 'Show', task %></td>
         <% if logged_in? %>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
