--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
             </div>   
          
       <div>   
+      <%= link_to 'New Task', new_task_path %>
         <%= link_to 'Back', { controller: 'users', action: 'index'} %>   
       </div>   
 </div>  
