step 14 to create sort  button.

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,9 +41,9 @@
 <%= paginate @tasks %>
 <br>
 <p>Sort by: 
-<%= link_to "sort by deadline",tasks_path(sort_by: 'End_date')  %>
-<%= link_to "status", tasks_path(order: 'Status') %>,
-<%= link_to "priority", tasks_path(order: 'Priority') %>
+<%= link_to "sort by deadline",tasks_path(sort_by: 'end_date')  %>
+<%= link_to "status", tasks_path(order: 'status') %>,
+<%= link_to "priority", tasks_path(order: 'priority') %>
 </p>
 <br>
 <%= link_to 'New Task', new_task_path %>
