step 14 and step 15 error correction

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :titles %>
+    <%= form.text_field :titles %>
   </div>
 
   <div class="field">
@@ -45,6 +45,8 @@
     <%= form.label :status %>
     <%= form.text_field :status %>
   </div>
+
+ 
 
   <div class="actions">
     <%= form.submit %>
