--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,13 +5,14 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Titles</th>
       <th>Content</th>
       <th>Start date</th>
       <th>End date</th>
       <th>Kind of task</th>
       <th>Priority</th>
       <th>Status</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,13 +20,14 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.name %></td>
+        <td><%= task.titles%></td>
         <td><%= task.content %></td>
         <td><%= task.start_date %></td>
         <td><%= task.end_date %></td>
         <td><%= task.kind_of_task %></td>
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
+       
         <td><%= task.user_id %></td>
         <td><%= link_to 'Show', task %></td>
         
