--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @task.name %>
+  <strong>titles:</strong>
+  <%= @task.titles %>
 </p>
 
 <p>
@@ -34,4 +34,5 @@
   <strong>Status:</strong>
   <%= @task.status %>
 </p>
+
 <%= link_to 'Back', tasks_path %>
