--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,11 @@ td{
    color:seagreen;
 }
 p{
-    font-size: 18px;
-    
+    font-size: 40px;
+
 color: brown;
+}
+.page{
+color: blue;
+    font-size: 40px;
 }
