--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Welcome <%= @user.name %> page's</h1>
+<h1>Welcome <%= @user.name %>  on your page </h1>
 
 <div class="container">        
-        <h3>Add a user</h3>   
+        <h3>create your tasks .</h3>   
        
             <div>   
               <label>user Name:</label>   
