--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -30,11 +30,12 @@
        
         <td><%= task.user_id %></td>
         <td><%= link_to 'Show', task %></td>
-        
+        <% if logged_in? %>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      
+        <% end %>
+        </tr>
+    
     <% end %>
   </tbody>
 </table>
@@ -50,5 +51,6 @@
 <%= link_to "priority", tasks_path(order: 'priority') %>
 </p>
 <br>
-
+<% if logged_in? %>
 <%= link_to 'New Task', new_task_path %>
+<% end %>
