step 16 input select by status.,

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,9 @@
 <% @users.each do |user| %>
-    <%= user.name %>
+    
+     name is :<%= user.name %><br>
+    email:<%= user.email %><br>
+    title: <%= user.admin %><br><br>
+    
     <% end %>
+   
+    
