step 16 input selection by status

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <% @users.each do |user| %>
-    
-     name is :<%= user.name %><br>
+    <h1> user list screen of management screen!</h1>
+     name is : <% user.id %> <%= user.name %><br>
     email:<%= user.email %><br>
     title: <%= user.admin %><br><br>
     
