--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,23 +12,34 @@
 <% end %>
 
 <%= form_with(model: @user, local: true) do |f| %>
+  <div class="btn btn-primary", id="btnn">
   <%= f.label :name %>
-  <%= f.text_field :name %>
-
+  <%= f.text_field :name %><br>
+</div>
+<div class="btn btn-primary", id="btnn">
   <%= f.label :email %>
-  <%= f.email_field :email %>
-
+  <%= f.email_field :email %><br>
+</div>
+<div class="btn btn-primary", id="btnn">
   <%= f.label :password %>
-  <%= f.password_field :password %>
-
+  <%= f.password_field :password %><br>
+</div>
+<div class="btn btn-primary", id="btnn">
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-
+  <%= f.password_field :password_confirmation %><br>
+</div>
+<div class="btn btn-primary", id="btnn">
   <%= f.label :title%>
-  <%= f.text_field :title %>
-
+  <%= f.text_field :title %><br>
+</div>
+<div class="btn btn-primary", id="btnn">
   <%= f.label :admin %>
-  <%= f.text_field :admin %>
-  <%= link_to 'Back', { controller: 'users', action: 'index'} %>   
+  <%= f.text_field :admin %><br>
+  </div>
+  
+<div class="btn btn-primary", id="btnn">
   <%= f.submit "Create my account" %>
-<% end %>
+  </div>
+  <br>
+  <%= link_to 'Back', { controller: 'users', action: 'index'} %> 
+  <% end %>
