--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -38,7 +38,7 @@
   <br>
   <div class="btn btn-primary", id="btn">
     <%= form.label :priority %>
-    <%= form.select :status, [ 'high', 'medium', 'low' ], :prompt => 'Select One' %>
+    <%= form.select :priority, [ 'high', 'medium', 'low' ], :prompt => 'Select One' %>
   </div>
   <br>
   <div class="btn btn-primary", id="btn">
