--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,11 +18,10 @@
  }
  .body{
      background-color:skyblue;
-
  }
 .footer{
     background-color: #e6b2ee;
-    margin-top: 200px;
+    margin-top: 180x;
     text-align: center;
     height: 50px;;
 }
