--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,13 @@
      <div class="admin">
     name is : <% user.id %> <%= user.name %><br>
     email:<%= user.email %><br>
-    title: <%= user.admin %><br><br>
+    title: <%= user.title %><br><br>
     </div>
+    <%= link_to 'Edit', edit_user_path(user) %>
+    <%= link_to 'Edit', edit_user_path(user) %> 
+          
+         <%= link_to 'details', user_path(user) %>   
+       
+        <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
    
