--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
   <% end %>
   
 </nav>
+<% if current_user.try(:admin?) %>
+<% link_to "users", user_path %>
+<% end %>
 <% if logged_in? %>
 <%= link_to "Logout", session_path(current_user.id), method: :delete %>
 <% else %>
