--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,12 @@
   <% end %>
   
 </nav>
-<% if current_user.try(:admin?) %>
-<% link_to "users", user_path %>
-<% end %>
+
+
+
 <% if logged_in? %>
+<%= link_to 'all users registered', users_path %> 
+<%= link_to 'all tasks created', tasks_path %> 
 <%= link_to "Logout", session_path(current_user.id), method: :delete %>
 <% else %>
 <%= link_to "Sign up", new_user_path %>
