--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,20 +27,19 @@
   
 </nav>
 
-
+<div  class="btn btn-outline-success",id="btnn">
 
 <% if logged_in? %>
-<%= link_to 'all users registered', users_path %> 
-<%= link_to 'all tasks created', tasks_path %> 
-<%= link_to "Logout", session_path(current_user.id), method: :delete %>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to 'all users registered', users_path %> </p>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to 'all tasks created', tasks_path %> </p>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to "Logout", session_path(current_user.id), method: :delete %></p>
 <% else %>
-<%= link_to "Sign up", new_user_path %>
-<%= link_to "Login", new_session_path %>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to "Sign up", new_user_path %></p>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to "Login", new_session_path %></p>
 <% end %>
 
 </header>
 </div>
-
 <div class="body">
 <%= t('view.sample') %>
  <% flash.each do |key, value| %>
