--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,43 +1,6 @@
-<div class="container">   
-  
-<%= form_for @user, url: {action: :update} do |f| %>   
-     
-   <h3>Add a user</h3>   
- <%= "<div>#{@user.errors.full_messages.first}</div>".html_safe if @user.errors.any? %>   
-    <p>   
-  
-     <div>   
-            <label>user Name</label>   
-            <%= f.text_field :name %>   
-     </div>   
-  
-     <div>   
-            <label>name</label>   
-            <%= f.text_field :name%>   
-     </div>   
-        
-     <div>   
-            <label>email<label>   
-            <%= f.text_field :email %>   
-     </div>   
-     <div>   
-            <label>password<label>   
-            <%= f.password_field :password%>   
-     </div>   
-  
-     <div>   
-     <label>password_confirmation<label>   
-     <%= f.password_field :email %>   
-</div>   
-
-     <div>   
-            <label>title<label>   
-            <%= f.text_field :title %>   
-     </div>   
-  
-      </p>   
-   <div>   
-      <%= link_to 'Back', { controller: 'users', action: 'index'} %>   
-      <%= f.submit 'Update user' %>   
-    </div>   
-<% end %>   
+<h2>Edit user details</h2>
+<p>
+    <%= @user.name %>
+    <%= @user.title %>
+    <%= @user.email %>
+</p> 
