--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,3 +12,13 @@
         <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
    
+#     <h2>Manage Users</h2>
+# <p>As an administrator, you can add new users to the system. You can also edit or delete existing ones.</p>
+# <p>
+#     <% @users = User.all %>
+#     <ul class="users">
+#         <% @users.each do |user| %>
+#     <li><%= user.id %> <%= user.name %> <%= user.title %> <%= user.email %> <%= link_to "Edit User", edit_user_details_path(id: user.id) %></li>
+#         <% end %>
+#     </ul>
+# </p>
