--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -47,7 +47,7 @@
   
     </div>
     <div class="field">
-    <%= form.hidden_field :user_id %>
+    <%= form.hidden_field :user_id, value: 'current_user.id' %>
   </div
     <br>
   <div class="btn btn-primary", id="btn">
