--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
 <div  class="btn btn-outline-success",id="btnn">
 
 <% if logged_in? %>
-<p  class="btn btn-outline-success",id="btnn"><%= link_to 'user list registered', users_path %> </p>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to ' all user list registered', admin_users_path %> </p>
+<p  class="btn btn-outline-success",id="btnn"><%= link_to ' user', users_path %> </p>
 <p  class="btn btn-outline-success",id="btnn"><%= link_to 'all tasks created', tasks_path %> </p>
 <p  class="btn btn-outline-success",id="btnn"><%= link_to "Logout", session_path(current_user.id), method: :delete %></p>
 <% else %>
