--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,6 +13,7 @@
       <th>Priority</th>
       <th>Status</th>
       <th>User</th>
+      <th>Labels</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,6 +31,8 @@
         <td><%= task.status %></td>
        
         <td><%= task.user.name %></td>
+      
+        
         <td><%= link_to 'Show', task %></td>
        
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
