--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @label.user %>
+  <%= @label.user.name %>
 </p>
 
 <%= link_to 'Edit', edit_label_path(@label) %> |
