--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,13 +30,9 @@
 </div>
 <div class="btn btn-primary", id="btnn">
   <%= f.label :title%>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :title, disabled: (true unless current_user && current_user.title == 'admin') %><br>
 </div>
-<div class="btn btn-primary", id="btnn">
-  <%= f.label :admin %>
-  <%= f.text_field :admin %><br>
-  </div>
-  
+
 <div class="btn btn-primary", id="btnn">
   <%= f.submit "Create my account" %>
   </div>
